@@ -1,0 +1,11 @@
+{
+  "schema": "weftend.shadowAudit.request/0",
+  "v": 0,
+  "rulesetId": "SHADOW_RULESET_V0",
+  "stream": {
+    "schema": "weftend.shadowAudit.stream/0",
+    "v": 0,
+    "events": []
+  },
+  "unknownRequestField": "SHOULD_FAIL_CLOSED"
+}
